--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,2 @@
-<<<<<<< HEAD
-*/config/development
-*/logs/log-*.php
-!*/logs/index.html
-*/cache/*
-!system/cache/*
-!*/cache/index.html
-!*/cache/.htaccess
-
-user_guide_src/build/*
-user_guide_src/cilexer/build/*
-user_guide_src/cilexer/dist/*
-user_guide_src/cilexer/pycilexer.egg-info/*
-
-#codeigniter 3
-application/logs/*
-!application/logs/index.html
-!application/logs/.htaccess
-/vendor/
-=======
 node_modules
->>>>>>> ac7b298 (Primer commit portfolio)
-/nbproject/
+nbproject
